# pmo-da15

./: .gitignore  README.md  main.ipynb  pyproject.toml  schema.json
scripts/: run_llama_cpp
src/: cli.py  config.py  extraction.py  misc.py  summarization.py
src/core/: config.py  extraction.py  llm_adapter.py  llm_store.py  misc.py  scraping.py  summarization.py
src/core/llm_adapters/: __init__.py  llamacpp.py  openrouter.py
src/llms/: adapter.py  llamacpp.py  openrouter.py
