tool.uv.package = true

[project]
name = "pmo-da15"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "crawl4ai>=0.7.7",
    "pydantic>=2.12.4",
    "openai>=2.8.1",
    "pillow>=12.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
]

[project.scripts]
cli = "cli:main"